# gSLICr-torch

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  demo.lua  gslicr-scm-1.rockspec  init.cpp  init.lua  seg_mask_demo.lua  visual_demo.lua
